# ComIn-Project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: chunking.py  collect_data.py  config.py  corp_code.py  dart_origin_document.py  embedding.py
docs/: DEVLOG.md
langchain_rag/: chain.py  rag.py  vectorstore.py
langgraph_rag/: graph.py  nodes.py  query_analysis.py  rag.py  state.py
vanilla_rag/: generate.py  rag.py
