[project]
name = "comin-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "requests-cache>=1.3.3",
    "sentence-transformers>=5.6.0",
]
