[project]
name = "comin-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "chromadb>=1.5.9",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "requests-cache>=1.3.3",
    "sentence-transformers>=5.6.0",
]

[tool.pytest.ini_options]
# 테스트가 루트의 data/, langchain_rag/, langgraph_rag/ 패키지를 import할 수 있게 한다
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
